--- a/Changes.org
+++ b/Changes.org
@@ -17,19 +17,22 @@
 
 ** Incompatible changes
 
-**** Prefix interpretation when storing remember notes
-     The prefix argument to the `C-c C-c' command that finishes a
-     remember process is not interpetred differently:
+*** Prefix interpretation when storing remember notes
+    The prefix argument to the `C-c C-c' command that finishes a
+    remember process is not interpetred differently:
 
-     :C-c C-c       Store the note to predefined file and headline
-     :C-1 C-c C-c   Select the storage location interactively
-     :C-0 C-c C-c   Re-use the last used location
-     :C-u C-c C-c   Like C-c C-c, but immediately visit the note
-     :              in its new location.
+    :C-c C-c       Store the note to predefined file and headline
+    :C-1 C-c C-c   Select the storage location interactively
+    :C-0 C-c C-c   Re-use the last used location
+    :C-u C-c C-c   Like C-c C-c, but immediately visit the note
+    :              in its new location.
 
-     This was requested by John Wiegley.
+    This was requested by John Wiegley.
 
 
+*** Capturing column view is now on `C-c C-x i'
+    The reason for this change was that `C-c C-x r' is also used
+    as a tty key replacement.
 ** Details
 
 *** Prefix arg 0 to S-RET disabled integer increment during copy
