--- a/Changes.org
+++ b/Changes.org
@@ -10,6 +10,11 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
+* Version 6.08 (in preparation)
+
+*** Clicking with mouse-2 on clock info in mode-line visits the clock.
+    Thanks to James TD Smith for a patch to this effect.
+
 * Version 6.07
 :PROPERTIES:
 :VISIBILITY: content
