--- a/Changes.org
+++ b/Changes.org
@@ -10,7 +10,7 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-* Version 6.08 (in preparation)
+* Version 6.08
 :PROPERTIES:
 :VISIBILITY: content
 :END:
